# contract_interfacer

./: .gitignore  Cargo.toml  README.md  test.csv  test5.csv
abi/: purseTokenAbi.json
src/: constants.rs  contract.rs  file.rs  lib.rs  main.rs  utils.rs  wallet.rs
src/cli/: args.rs  command.rs  commands.rs  mod.rs  validate.rs
src/contract/: mod.rs  purse_contract.rs  purse_executor.rs
