[package]
name = "contract_interfacer"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }
eyre = "0.6.12"
csv = "1.3.0"
serde = "1.0.203"
serde_json = "1.0.117"
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "5394d899adca736a602e316e6f0c06fdb5aa64b9", features = [
    "ws",
] }
alloy = { version = "0.1.2", features = ["full"] }
